--- a/index.html
+++ b/index.html
@@ -9,25 +9,28 @@
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
+  <div class="container">
+    <section class="message">
 
   We're coming soon
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+ <p> Hello fellow shoppers! We're currently building our new fashion store. 
+  Add your email below to stay up-to-date with announcements and our launch deals.</p>
+<div class="email">
+ <input type="email" placeholder="Email Address">
+ <input type="submit" name="submit" id="submit">
+ <img src="./images/icon-error.svg" id="error-icon">
+</div>
+    </section>
+    <section class="image">
 
-  Email Address
+    </section>
+
+    <script src="./script.js"></script>
   
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  </div>
 </body>
 </html>
