changes in text part

--- a/index.html
+++ b/index.html
@@ -18,19 +18,25 @@
   <div class="container">
     <section class="message">
 
+      <div class="gap">
+
       <div class="logo">
-        <img src="./images/logo.svg" alt="" class="logo">
+        <img src="./images/logo.svg" alt="" class="logo" style="height:19px">
       </div>
 
-      <div class="soon">We're coming soon</div>
+      <div class="soon"><h1><span>We're</span> <br>coming <br>soon</h1></div>
+      </div>
+      
       <div class="para">
         <p> Hello fellow shoppers! We're currently building our new fashion store.
           Add your email below to stay up-to-date with announcements and our launch deals.</p>
       </div>
       <form>
         <div class="email">
-          <input type="email" placeholder="Email Address" autocomplete="off">
-          <input type="submit" name="submit" id="submit">
+          <div class="email-control">
+          <input type="email" placeholder="Email Address" autocomplete="off" id="mail">
+          <input type="submit" name="" id="submit">
+          </div>
           <img src="./images/icon-error.svg" id="error-icon">
           <p class="error-msg">error msg</p>
         </div>
