form set up completed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <div class="email">
           <div class="email-control">
           <input type="email" placeholder="Email Address" autocomplete="off" id="mail">
-          <input type="submit" name="" id="submit">
+          <input type="submit" name="" value="" autocomplete="off" id="submit"></button>
+          <img src="./images/icon-arrow.svg" id="arrow">
           </div>
           <img src="./images/icon-error.svg" id="error-icon">
           <p class="error-msg">error msg</p>
