--- a/index.html
+++ b/index.html
@@ -20,28 +20,32 @@
 
       <div class="gap">
 
-      <div class="logo">
-        <img src="./images/logo.svg" alt="" class="logo" style="height:19px">
+        <div class="logo">
+          <img src="./images/logo.svg" alt="" class="logo" style="height:19px">
+        </div>
+
+        <div class="soon">
+          <h1><span>We're</span> <br>coming <br>soon</h1>
+        </div>
       </div>
 
-      <div class="soon"><h1><span>We're</span> <br>coming <br>soon</h1></div>
-      </div>
-      
       <div class="para">
         <p> Hello fellow shoppers! We're currently building our new fashion store.
           Add your email below to stay up-to-date with announcements and our launch deals.</p>
       </div>
-      <form>
-        <div class="email">
-          <div class="email-control">
-          <input type="email" placeholder="Email Address" autocomplete="off" id="mail">
-          <input type="submit" name="" value="" autocomplete="off" id="submit"></button>
-          <img src="./images/icon-arrow.svg" id="arrow">
+      <div class="viewMail">
+        <form class="form" id="form">
+          <div class="form-control">
+            <input type="email" placeholder="Email Address" id="email">
+            <img class="error-icon" src="./images/icon-error.svg" alt="">
+            <p id="error-msg">error msg</p>
           </div>
-          <img src="./images/icon-error.svg" id="error-icon">
-          <p class="error-msg">error msg</p>
-        </div>
-      </form>
+          <div class="submit">
+            <input type="submit" autocomplete="off" value="" class="submit">
+            <img src="./images/icon-arrow.svg" alt="" class="arrow">
+          </div>
+        </form>
+      </div>
     </section>
     <section class="image">
       <img src="./images/hero-desktop.jpg" alt="">
