--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="gap">
 
         <div class="logo">
-          <img src="./images/logo.svg" alt="" class="logo" style="height:19px">
+          <img src="./images/logo.svg" alt="" class="logo">
         </div>
 
         <div class="soon">
@@ -48,10 +48,8 @@
       </div>
     </section>
     <section class="image">
-      <img src="./images/hero-desktop.jpg" alt="">
-
+  
     </section>
-  </div>
   <script src="./script.js"></script>
 </body>
 
